--- a/src/app/app/login/components/forgot-password.component.html
+++ b/src/app/app/login/components/forgot-password.component.html
@@ -10,7 +10,7 @@
 			<div class="login-separator"></div>
 			<br/>
 <!-- 			<a (click)="gotoLogin()"> -->		
-			<a (click)="toggleVerificationCodeModal()">
+		<a (click)="toggleVerificationCodeModal()" id="send-password-link">
 				<div class="login-button">SEND PASSWORD</div>
 			</a>
 		</div>
