--- a/src/app/app/login/components/login.component.html
+++ b/src/app/app/login/components/login.component.html
@@ -6,8 +6,8 @@
 			<div class="error-alert" id="error-alert">{{getErrorMessageText()}}</div>
 			<div><input placeholder="Username" [(ngModel)]="vUsername" id="username"/></div>
 			<div><input placeholder="Password" type="password" [(ngModel)]="vPassword" id="password"/></div>
-			<a (click)="login($event)"><div class="login-button" id="login-button">SIGN IN</div></a>
-			<p><a (click)="gotoForgetPassword()">Forgot your password?</a></p>
+			<a (click)="login($event)" id="login-link"><div class="login-button" >SIGN IN</div></a>
+			<p><a (click)="gotoForgetPassword()" id="forget-password-blink">Forgot your password?</a></p>
 		</div>
 	</div>
 </div>
