--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -6,7 +6,7 @@
 
 @import "layout";
 @import "header";
-@import "footer";
+//@import "footer";
 @import "login";
 @import "verification";
 @import "modal-verification-code";
