--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -81,7 +81,11 @@ LIST VIEW - BUTTON
     width: 100%;
     height: 100%;
     margin-bottom: 50px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
+
+    &.menu {
+        overflow-x: visible;
+    }
     .no-divider {
         width: 100%;
         float:left;
@@ -108,7 +112,111 @@ LIST VIEW - BUTTON
         }
     }
 
+    .parent {
+        width: 100%;
+    }
 
+    .cover {
+        display: block;
+        width: 100%;
+        height: auto;
+        position: relative;
+        overflow: hidden;
+        padding: 35.64% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (1038 / 370) */
+
+        .cover-photo {
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: url("../img/dashboard.png")no-repeat center center;
+            background-size: cover;
+
+            .anti-spy {
+                width: 100%;
+                position: absolute;
+                background-color: rgba(0, 0, 0, 0.4);
+                padding: 10.64% 10% 25% 5%;
+            }
+            .cover-date {
+                height: 10%;
+                width: 100%;
+                position: absolute;
+                color: $white;
+                font-weight: bold;
+                font-size: 4vw;
+                padding: 0% 1% 0% 73%;
+            }
+            .profile-photo {
+                width: 6%;
+                background: url(../img/profpic.jpg) no-repeat;
+                background-position: center center;
+                border: 3px solid $white;
+                border-radius: 50%;
+                -webkit-transform: translateZ(0);
+                -webkit-backface-visibility: hidden;
+                background-size: cover;
+                margin-left: auto;
+                margin-right: auto;
+                padding: 10.64% 10% 10% 5%;
+                margin-top: 5%;
+            }
+            .cover-name {
+                height: 20%;
+                width: 100%;
+                text-align:center;
+                position: absolute;
+                color: $white;
+                font-weight: bold;
+                font-size: 5vw;
+            }
+        }
+
+        
+    }
+
+    .square-button {
+        display: table;
+        width: 100%;
+        padding-bottom: 2vw;
+        padding-top: 2vw;
+
+        &.border-left {
+            border-left: 1px solid $white-smoke;
+        }
+        &.border-bottom {
+            border-bottom: 1px solid $white-smoke;
+        }
+
+        .icon {
+            height: 15vw;
+            width: 100%;
+
+            &.call {
+                background: url("../img/icon-idsp/phone-grey.png")no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 12vw;
+            }
+        }
+
+        .text {
+            height: 30%;
+            display: inline-block;
+            width: 100%;
+            font-weight: lighter;
+            text-align: center;
+            font-size: 4vw;
+            padding-bottom: 1vw;
+            padding-top: 1vw;
+        }
+    }
+
+    
 
 /*
 ===========================================================
