--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -90,7 +90,7 @@
 	</div>
 
 	<div *ngIf="vLoadShow">
-		<div class="item-container-i">
+		<div class="item-container">
 			<div class="item-notification">LOAD AS OF 04/12/2016 10.00 AM</div>
 		</div>
 
@@ -138,7 +138,7 @@
 	</div>
 
 	<div *ngIf="vPhysicalShow">
-		<div class="item-container-i">
+		<div class="item-container">
 			<div class="item-notification">PHYSICAL AS OF 04/12/2016 10.00 AM</div>
 		</div>
 
