--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -15,11 +15,11 @@
         </div>
     </div>
 
-    <div *ngFor="#FilteredSearch of vSearchedList" >
+    <div *ngFor="#FilteredSearch of vSearchedList">
 			<div class="item-container">
 			    <div class="container">
 			        <div class='cell'>
-		                <div class='container' id ="accSeq" *ngIf="FilteredSearch.AccountReceivable[0].Retailer.Route.RouteDay[0].sequence"><div class='cell left grey'># Route {{FilteredSearch.AccountReceivable[0].Retailer.Route.RouteDay[0].sequence}}</div></div>
+		                <div class='container' id ="accSeq" *ngIf="FilteredSearch.AccountReceivable[0].Retailer.Route[0].RouteDay[0].sequence"><div class='cell left grey'># Route {{FilteredSearch.AccountReceivable[0].Retailer.Route[0].RouteDay[0].sequence}}</div></div>
 		                <div class='container' id ="accRetName"><div class='cell left'>{{FilteredSearch.AccountReceivable[0].Retailer.retailer_name}}</div></div>
 		                <div class='container' id ="accRetMin"><div class='cell left italic'>{{FilteredSearch.AccountReceivable[0].Retailer.retailer_min}}</div></div>
 			        </div>
