--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -278,6 +278,12 @@ LIST VIEW - TEXT
             &.icon {
                 width: 15%;
             }
+            &.logo {
+                width:30%;
+            }
+            &.content{
+                width:70%
+            }
 
             &.bold {
                 font-weight: bold;
@@ -291,6 +297,9 @@ LIST VIEW - TEXT
 
             &.grey {
                 color: $grey;
+            }
+            &.green {
+                color: $apple;
             }
             &.deep-cyan {
                 color: $deep-cyan;
@@ -338,6 +347,29 @@ LIST VIEW - ICON
                 background-position-y: center;
                 background-size: 20px;
             }
+            .profpic-purple {
+                border: 1px solid $black;
+                border-radius: 100%;
+                background-color:#E6E0EC;
+                padding: 10% 0% 40% 0%;
+                margin: 0% 25% 0% 25%;
+                color:$apple;
+                text-align: center;
+                line-height:0px;
+                font-size: 30px;
+            }
+            .profpic-pink {
+                border: 1px solid $black;
+                border-radius: 100%;
+                background-color:#FDEADA;
+                padding: 10% 0% 40% 0%;
+                margin: 0% 25% 0% 25%;
+                color:$apple;
+                text-align: center;
+                line-height:0px;
+                font-size: 30px;
+            }
+
         }
     }
       
