1. Responsive Hamburger & My Dashboard. 2. Adding Icon.

--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -54,37 +54,37 @@
     
     <div class="double-divider" (click)="goToTargetsActuals()" id="targets-actuals">
         <div class= "square-button border-bottom">
-            <div class="icon call"></div>
+            <div class="icon target"></div>
             <div class="text">Targets &amp; Actuals</div>
         </div>      
     </div>
     <div class="double-divider" (click)="goToInventory()" id="inventory">
         <div class= "square-button border-bottom border-left">
-            <div class="icon call"></div>
+            <div class="icon inventory"></div>
             <div class="text">Inventory</div>
         </div>      
     </div>
     <div class="double-divider" (click)="goToRetailerRoute()" id="retailer-route">
         <div class= "square-button border-bottom">
-            <div class="icon call"></div>
+            <div class="icon retailer-route"></div>
             <div class="text">Retailer Route</div>
         </div>      
     </div>
     <div class="double-divider" (click)="goToAccountsReceivables()" id="account-receivables">
         <div class= "square-button border-bottom border-left">
-            <div class="icon call"></div>
+            <div class="icon acc-receivable"></div>
             <div class="text">Account Receivables</div>
         </div>      
     </div>
     <div class="double-divider" (click)="goToDSPAlerts()" id="dsp-alerts">
         <div class= "square-button border-bottom">
-            <div class="icon call"></div>
+            <div class="icon alert"></div>
             <div class="text">Threshold &amp; Alerts</div>
         </div>      
     </div>
     <div class="double-divider">
         <div class= "square-button border-bottom border-left" >
-            <div class="icon call"></div>
+            <div class="icon sync"></div>
             <div class="text">Sync</div>
         </div>      
     </div>
