--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -149,7 +149,7 @@ LIST VIEW - BUTTON
                 color: $white;
                 font-weight: bold;
                 font-size: 4vw;
-                padding: 0% 1% 0% 73%;
+                padding: 1% 1% 0% 73%;
             }
             .profile-photo {
                 width: 6%;
@@ -179,6 +179,7 @@ LIST VIEW - BUTTON
         
     }
 
+
     .square-button {
         display: table;
         width: 100%;
@@ -193,14 +194,86 @@ LIST VIEW - BUTTON
         }
 
         .icon {
-            height: 15vw;
+            height: 18vw;
             width: 100%;
 
             &.call {
                 background: url("../img/icon-idsp/phone-grey.png")no-repeat;
                 background-position-x: center;
                 background-position-y: center;
-                background-size: 12vw;
+                background-size: 15vw;
+            }
+            &.bcp {
+                background: url(#{$icon-round-grad-bcp})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.inventory {
+                background: url(#{$icon-round-grad-inventory})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.logout {
+                background: url(#{$icon-round-grad-logout})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.remittance {
+                background: url(#{$icon-round-grad-remittance})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.stock-return {
+                background: url(#{$icon-round-grad-stock-return})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.target {
+                background: url(#{$icon-round-grad-target})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.acc-receivable {
+                background: url(#{$icon-round-grad-acc-receivable})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.alert {
+                background: url(#{$icon-round-grad-alert})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.collection {
+                background: url(#{$icon-round-grad-collection})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.retailer-route {
+                background: url(#{$icon-round-grad-retailer-route})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.sync {
+                background: url(#{$icon-round-grad-sync})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
+            }
+            &.visited {
+                background: url(#{$icon-round-grad-visited})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 15vw;
             }
         }
 
