--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -16,6 +16,7 @@
           color: $white;
           font-size: 5vw;
           padding: 3% 0% 0% 0%;
+          font-weight: 600;
         }
         .header-icon{
           width: 10vw;
@@ -26,11 +27,14 @@
             background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABhQTFRFAAAA%2F%2F%2F%2FAAAAAAAAAAAAAAAAAAAA%2F%2F%2F%2FeQ7W7QAAAAd0Uk5TAAAIGCBIYL3mPFwAAAA%2FSURBVChTYxBEAwx0ElAvRwKKQAFzZAFDoIBpGgKkggSUXRDAGaSFARkwYhVghFoogEuATu7AEKCFO9AANQQAPu5OcaM2uDkAAAAASUVORK5CYII%3D) center center no-repeat;
             background-size: 8vw;
             background-position: center center;
+            padding: 0% 0% 0% 3%;
+
           }
           &.back{
             background: url("../img/icon-idsp/back-white.png") no-repeat;
             background-size: 8vw;
             background-position: center center;
+            padding: 0% 0% 0% 3%;
           }
           &.filter{
             right: 0;
