Add Icon in Hamburger.

--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -49,21 +49,21 @@
             </div>
         <div class="separator"></div>
             <div class="container" (click)="goToRetailerRoute()">
-                <div class='cell icon call'></div>
+                <div class='cell icon retailer-route'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Retailer Route</div></div>
                 </div>
             </div>
         <div class="separator"></div>
             <div class="container" (click)="goToAccountReceivables()">
-                <div class='cell icon call'></div>
+                <div class='cell icon acc-receivable'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Account Receivables</div></div>
                 </div>
             </div>
         <div class="separator"></div>
             <div class="container" (click)="goToThresholdAlerts()">
-                <div class='cell icon call'></div>
+                <div class='cell icon alert'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Threshold &amp; Alerts</div></div>
                 </div>
@@ -86,21 +86,21 @@
         </div>
         <div class="separator"></div>
             <div class="container" (click)="goToTargetsActuals()">
-                <div class='cell icon call'></div>
+                <div class='cell icon target'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Targets &amp; Actuals</div></div>
                 </div>
             </div>
         <div class="separator"></div>
             <div class="container" (click)="goToVisitedRetailerRoute()">
-                <div class='cell icon call'></div>
+                <div class='cell icon visited'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Visited Retailer Route</div></div>
                 </div>
             </div>
         <div class="separator"></div>
             <div class="container" (click)="goToCollection()">
-                <div class='cell icon call'></div>
+                <div class='cell icon collection'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Collection &amp; Remittance Summary</div></div>
                 </div>
