--- a/src/app/app/basic-call-procedure/components/detail-retailer.component.html
+++ b/src/app/app/basic-call-procedure/components/detail-retailer.component.html
@@ -94,6 +94,11 @@
                 <div class='cell icon'></div>
             </div>
         </div>
+        <div class ="no-divider">
+            <div class="button" (click)="gotoBCPActivityStep()">
+                <div class="button-identifier" >START</div>
+            </div>
+        </div>
 
         <!--<div class="item-container">
             <div class="item-identifier">
