--- a/src/app/app/shared/components/modal-includes/verification-code-modal.component.html
+++ b/src/app/app/shared/components/modal-includes/verification-code-modal.component.html
@@ -1,16 +1,14 @@
 <div class="modal-verification-code">
     <div class="modal-body">
         <div class="item-header">
-            SUCCESS!
         </div>
         <div class="item-title">
-            Password has been sent to your
-            <br/>mobile and email address.
+            Please contact your Distributor Admin for password reset.
         </div>
     </div>
     <div class="modal-footer">
         <div class="button red" (click)="close()">
-            Close
+            OK
         </div>
     </div>
 </div>
