--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -80,7 +80,8 @@ $container-login-height: 100%;
 				border: none;
 				line-height: 50px - 20px;
 				font-size: medium;
-				margin-bottom: 5px;
+				margin-top: 10px;
+				margin-bottom: 10px;
 				background-color: rgba(199, 195, 184, 0.5);
 				outline: 0;
 				color : #000;
