--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -9,6 +9,7 @@
 //@import "footer";
 @import "login";
 @import "verification";
+@import "mpin";
 @import "modal-verification-code";
 @import "targets-actuals";
 @import "inventory";
