--- a/src/app/app/login/components/login.component.html
+++ b/src/app/app/login/components/login.component.html
@@ -7,7 +7,7 @@
 			<div><input placeholder="Username" [(ngModel)]="vUsername" id="username"/></div>
 			<div><input placeholder="Password" type="password" [(ngModel)]="vPassword" id="password"/></div>
 			<a (click)="login($event)" id="login-link"><div class="login-button" >SIGN IN</div></a>
-			<p><a (click)="gotoForgetPassword()" id="forget-password-blink">Forgot your password?</a></p>
+			<p><a (click)="toggleVerificationCodeModal()" id="forgot-password-link">Forgot your password?</a></p>
 		</div>
 	</div>
 	<div class="smart-logo"></div>
