Add Raw Home Page.

--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -26,6 +26,13 @@
     </div>
 
     <div class="menu-item-box">
+        <div class="container" (click)="goToHome()">
+            <div class='cell'>
+                <div class='container'><div class='cell single'>Home</div></div>
+            </div>
+            <div class='cell icon arrow-right'></div>
+        </div>
+
 
         <div class="container" (click)="goToMyDashboard()">
             <div class='cell'>
