--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -8,6 +8,7 @@
 @import "header";
 //@import "footer";
 @import "login";
+@import "home";
 @import "verification";
 @import "modal-verification-code";
 @import "targets-actuals";
