--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -29,22 +29,19 @@ $container-login-height: 100%;
 		color:    #FFF;
 	}
 	.outer-box {
-		max-width : 320px;
-		margin: 70px auto 0px;
+		max-width : 75vw;
+		margin: 20vw auto -3vw;
 		.header {
 			color: #FFF;
-			font-size: 28px;
-			line-height: 40px;
-			margin-bottom: 75px;
+			font-size: 10vw;
+			line-height: 0vw;
+			margin-bottom: 20vw;
 			text-align: center;
-			font-weight: lighter;
 		}
 		.inner-box {
 			background-color: rgba(0, 0, 0, 0);
 			border: 0;
 			text-align: center;
-			padding: 0;
-
 			.button {
 				width: 100%;
 				margin: 60px auto 18px;
@@ -74,11 +71,10 @@ $container-login-height: 100%;
             }
 			input {
 				width: 100%;
-				margin: 2px auto;
+				margin: 2vw auto;
 				display: block;
-				height: 35px;
+				height: 10vw;
 				border: none;
-				line-height: 50px - 20px;
 				font-size: medium;
 				margin-bottom: 5px;
 				background-color: rgba(199, 195, 184, 0.5);
@@ -117,7 +113,7 @@ $container-login-height: 100%;
 	.smart-logo
 	{
 		display: block;
-        height: 30px;
+        //height: 30px;
         width: 100%;
         background: 
         url("../img/smart-logo.png")
