Modify MPIN resend MPIN link

--- a/src/app/app/shared/components/modal-includes/resend-mpin-modal.component.html
+++ b/src/app/app/shared/components/modal-includes/resend-mpin-modal.component.html
@@ -2,7 +2,7 @@
     <div class="modal-body">
         <div class="item-header"></div>
         <div class="item-title">
-            Please Contact your Distributor Admin for Password Reset (+63-9228888899).
+            MPIN has been successfully resend to your registered mobile number.
         </div>
     </div>
     <div class="modal-footer">
@@ -11,3 +11,4 @@
         </div>
     </div>
 </div>
+
