--- a/src/app/app/shared/components/modal.component.html
+++ b/src/app/app/shared/components/modal.component.html
@@ -2,5 +2,6 @@
         <div class="modal-internal">
                 <info-modal *ngIf='getModalStatus().info'></info-modal>
                 <verification-code-modal *ngIf='getModalStatus().verificationCode'></verification-code-modal>
+                <resend-mpin-modal *ngIf='getModalStatus().resendMpin'></resend-mpin-modal>
         </div>
 </div>
