--- a/src/app/app/close-day/components/close-day.component.html
+++ b/src/app/app/close-day/components/close-day.component.html
@@ -10,19 +10,19 @@
         </div>
     </div>
     
-    <div class="double-divider">
+    <div class="double-divider" (click)="goToTargetsActuals()" id="targets-actuals">
         <div class= "square-button border-bottom">
             <div class="icon target"></div>
             <div class="text">Targets &amp; Actuals</div>
         </div>      
     </div>
-    <div class="double-divider">
+    <div class="double-divider" (click)="goToVisitedRetailer()" id="visited-retailer">
         <div class= "square-button border-bottom border-left">
             <div class="icon visited"></div>
             <div class="text">Visited Retailer Route</div>
         </div>      
     </div>
-    <div class="double-divider">
+    <div class="double-divider" (click)="goToCollection()" id="collection">
         <div class= "square-button border-bottom">
             <div class="icon collection"></div>
             <div class="text">Collection &amp; Remittance</div>
