inventory & threshold UI

--- a/src/app/app/my-transaction/components/hc-retailer-route.component.html
+++ b/src/app/app/my-transaction/components/hc-retailer-route.component.html
@@ -18,7 +18,7 @@
 	-->
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic-pink">G</div></div>
+        	<div class='cell logo'><div class="profpic pink">G</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell content bold green'>#1</div>
@@ -37,7 +37,7 @@
     </div>
      <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic-purple">R</div></div>
+        	<div class='cell logo'><div class="profpic purple">R</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell content bold green'>#2</div>
@@ -56,7 +56,7 @@
     </div>
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic-pink">B</div></div>
+        	<div class='cell logo'><div class="profpic pink">B</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell content bold green'>#3</div>
@@ -75,7 +75,7 @@
     </div>
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic-purple">L</div></div>
+        	<div class='cell logo'><div class="profpic purple">L</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell content bold green'>#4</div>
