--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -1,5 +1,5 @@
 <a (click)="showMenuDay()"><div class="sub-tab triple" [ngClass] = "{active: vUnderlineDay}"><div class="text" [ngClass] = "{active: vUnderlineDay}">Day</div></div></a>
-<a (click)="showMenuWeek()"><div class="sub-menu-week" [ngClass] = "{active: vUnderlineWeek}"><div class="text" [ngClass] = "{active: vUnderlineWeek}">Week</div></div></a>
+<a (click)="showMenuWeek()"><div class="sub-tab triple2" [ngClass] = "{active: vUnderlineWeek}"><div class="text" [ngClass] = "{active: vUnderlineWeek}">Week</div></div></a>
 <a (click)="showMenuMonth()"><div class="sub-tab triple" [ngClass] = "{active: vUnderlineMonth}"><div class="text" [ngClass] = "{active: vUnderlineMonth}">Month</div></div></a>
 <!--Container-->
 <div class="container-body">
