--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -35,9 +35,9 @@
             .icon{
                 width:80px;
                 height:35px;
-                position: fixed;
+                position: absolute;
                 right: 0;
-                z-index: 1200;
+                z-index: 1;
                 background: url("../img/icon-idsp/search-black.png") no-repeat;
                 background-size: 25px;
                 background-position: center center;
