--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -1,30 +1,3 @@
-.sub-menu-week
-{
-	display: block;
-    width: 34%;
-    background-color: $apple;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: -3px;
-    float: left;
-    border-bottom: 2px solid $apple;
-    &.active{
-	    border-bottom: 2px solid $menu-underline;
-    	margin-left: 0;
-        color: $white;
-    }
-    .text
-    {
-    	color: $inactive-tab-grey;
-    	text-align: center;
-    	font-size: $header-tab;
-         &.active{
-            color: $white;
-            font-weight: bold;
-        }
-   }
-}
-
 .container-body {
 
     .item-container-md-ta {
@@ -42,7 +15,7 @@
         .cell {
             display:table-cell;
             font-size: $content-normal;
-            height:1.7em;
+            height:1.9em;
             vertical-align:middle;
 
 
@@ -120,12 +93,23 @@
             &.center {
                 text-align: center;
             }
-
-            &.call {
-                background: url("../img/icon-idsp/phone-grey.png")no-repeat;
+            &.targets-airtime {
+                background: url(#{$icon-targets-airtime})no-repeat;
                 background-position-x: center;
                 background-position-y: center;
-                background-size: 20px;
+                background-size: 6vw;
+            }
+            &.targets-broadband {
+                background: url(#{$icon-targets-broadband})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 6vw;
+            }
+            &.targets-sim {
+                background: url(#{$icon-targets-sim})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 5vw;
             }
 
         }
